# alignment_algorithm

./: .gitignore  README.md  pyproject.toml
alignment_algorithm/: algorithm_test.ipynb  gotoh.py  gotoh_local.py  needleman_wunsch.py  needleman_wunsch_numpy.py  smith_waterman.py  utils.py
tests/: test_alignment_algorithm.py
