[tool.poetry]
name = "alignment_algorithm"
version = "0.1.0"
description = ""
authors = ["Yibo Mao <yibo.mao@genscript.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
mypy = "^0.931"

[[tool.poetry.source]]
default = true
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
